# currency-converter

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  currency.db  docker-compose.yml  mydb.sqlite3  requirements.txt
.github/: ci.yml
.github/workflow/: ci.yml
.github/workflows/: ci.yml  test.yml
app/: config.py  main.py
app/api/: routes.py
app/models/: currency.py
app/services/: converter.py
currency-converter/: LICENSE  Makefile  README.md  pyproject.toml
currency-converter/currency_converter/: __init__.py  dataset.py  features.py  plots.py
currency-converter/currency_converter/modeling/: predict.py  train.py
currency-converter/docs/: mkdocs.yml
currency-converter/docs/docs/: index.md
docs/: mkdocs.yml
docs/site/: 404.html  index.html
env/: pyvenv.cfg
tests/: test_api.py
